# Knowledge-Base

docs/01-C面向对象/01-C封装/: 01-c实现封装.md
docs/01-C面向对象/02-C继承/: c继承.md
docs/01-C面向对象/07-C宏技巧/: C宏使用技巧.md
docs/01-C面向对象/08-c关键字/: 关键字.md
docs/02-嵌入式设计模式/01-创建型模式/01-单例模式/: 单例模式.md
docs/03-硬件交互与底层驱动/06-驱动分层/: 01-平台适配层规则.md
docs/08-构建系统与部署/01-CMake交叉编译工具链/: CMake交叉编译工具.md  CMake交叉编译工具链.md
docs/11-测试与质量保证/: 06-DAL-Display调试实录.md
docs/11-测试与质量保证/05-Mock测试/: 01-概念与原理.md  02-框架选型与搭建.md  03-编写测试与案例.md  04-进阶与注意事项.md  README.md
docs/14-代码管理与文档生成/02-Doxygen注释规范/: Doxygen注释规范.md
experments/01-C面向对象/01-C封装/01-C++封装/: Servo.cpp  Servo.hpp  hhh  main.cpp
experments/01-C面向对象/01-C封装/02-C封装法1/: hh  hhh  main.c  servo.c  servo.h
experments/01-C面向对象/01-C封装/03-C封装法2/: hhh  main.c  servo.c  servo.h
experments/01-C面向对象/01-C封装/04-C封装法3/: esp32_servo.c  hhh  main.c  servo.c  servo.h  servo_private.h
experments/01-C面向对象/01-C封装/05-touch_lcd/: CMakeLists.txt
experments/01-C面向对象/01-C封装/05-touch_lcd/components/board/: CMakeLists.txt  board.c
experments/01-C面向对象/01-C封装/05-touch_lcd/components/board_pin/: CMakeLists.txt  board_pin.c
experments/01-C面向对象/01-C封装/05-touch_lcd/components/board_pin/include/: board_pin.h
experments/01-C面向对象/01-C封装/05-touch_lcd/components/bsp_display/: CMakeLists.txt  bsp_display.c
experments/01-C面向对象/01-C封装/05-touch_lcd/components/bsp_gpio/: CMakeLists.txt  bsp_gpio.c
experments/01-C面向对象/01-C封装/05-touch_lcd/components/bsp_gpio/include/: bsp_gpio.h
experments/01-C面向对象/01-C封装/05-touch_lcd/components/bsp_ledc/: CMakeLists.txt  bsp_ledc.c
experments/01-C面向对象/01-C封装/05-touch_lcd/components/bsp_ledc/include/: bsp_ledc.h
experments/01-C面向对象/01-C封装/05-touch_lcd/components/bsp_spi/: CMakeLists.txt  bsp_spi.c
experments/01-C面向对象/01-C封装/05-touch_lcd/components/bsp_spi/include/: bsp_spi.h
experments/01-C面向对象/01-C封装/05-touch_lcd/components/bsp_touch/: CMakeLists.txt  bsp_touch.c
experments/01-C面向对象/01-C封装/05-touch_lcd/components/dal/: CMakeLists.txt
experments/01-C面向对象/01-C封装/05-touch_lcd/components/osal/: CMakeLists.txt  osal.c
experments/01-C面向对象/01-C封装/05-touch_lcd/components/platform_al/: CMakeLists.txt
experments/01-C面向对象/01-C封装/05-touch_lcd/components/platform_al/hal_gpio/: hal_gpio_esp32s3.c
experments/01-C面向对象/01-C封装/05-touch_lcd/components/platform_al/hal_gpio/include/: hal_gpio.h  hal_gpio_esp32s3.h
experments/01-C面向对象/01-C继承/: base_class.c  base_class.h
experments/01-C面向对象/02-C继承/: CMakeLists.txt  derived_class.c  derived_class.h  main.c
experments/01-C面向对象/07-C宏技巧/: main  main.c
experments/02-嵌入式设计模式/01-单例模式/01-饿汉式/: CMakeLists.txt
experments/02-嵌入式设计模式/01-单例模式/01-饿汉式/include/: singleton_pattern1.h  uart_typedef.h
experments/02-嵌入式设计模式/01-单例模式/01-饿汉式/src/: main.c  singleton_pattern1.c  uart_mock.c
experments/02-嵌入式设计模式/01-单例模式/02-懒汉式/: CMakeLists.txt
experments/02-嵌入式设计模式/01-单例模式/02-懒汉式/include/: singleton_pattern2.h
experments/02-嵌入式设计模式/01-单例模式/02-懒汉式/src/: main.c  singleton_pattern2.c
